--- a/Source/nachos-3.4/code/filesys/Makefile
+++ b/Source/nachos-3.4/code/filesys/Makefile
@@ -41,8 +41,8 @@ main.o: ../threads/main.cc ../threads/copyright.h ../threads/utility.h \
  ../machine/disk.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../threads/threadManage.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../machine/console.h ../threads/threadManage.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 list.o: ../threads/list.cc ../threads/copyright.h ../threads/list.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
@@ -71,7 +71,7 @@ scheduler.o: ../threads/scheduler.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/system.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/threadManage.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/threadManage.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 synch.o: ../threads/synch.cc ../threads/copyright.h ../threads/synch.h \
  ../threads/thread.h ../threads/utility.h ../threads/bool.h \
@@ -89,8 +89,8 @@ synch.o: ../threads/synch.cc ../threads/copyright.h ../threads/synch.h \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/list.h ../threads/system.h ../threads/scheduler.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 synchlist.o: ../threads/synchlist.cc ../threads/copyright.h \
  ../threads/synchlist.h ../threads/list.h ../threads/utility.h \
@@ -122,8 +122,8 @@ system.o: ../threads/system.cc ../threads/copyright.h ../threads/system.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 thread.o: ../threads/thread.cc ../threads/copyright.h ../threads/thread.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
@@ -141,7 +141,7 @@ thread.o: ../threads/thread.cc ../threads/copyright.h ../threads/thread.h \
  ../threads/switch.h ../threads/synch.h ../threads/list.h \
  ../threads/system.h ../threads/scheduler.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/threadManage.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/threadManage.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 utility.o: ../threads/utility.cc ../threads/copyright.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
@@ -170,8 +170,8 @@ threadtest.o: ../threads/threadtest.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 interrupt.o: ../machine/interrupt.cc ../threads/copyright.h \
  ../machine/interrupt.h ../threads/list.h ../threads/copyright.h \
@@ -189,8 +189,8 @@ interrupt.o: ../machine/interrupt.cc ../threads/copyright.h \
  ../machine/disk.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 sysdep.o: ../machine/sysdep.cc ../threads/copyright.h \
  /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h \
@@ -235,7 +235,7 @@ sysdep.o: ../machine/sysdep.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../machine/stats.h ../machine/timer.h \
- ../threads/threadManage.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/threadManage.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 stats.o: ../machine/stats.cc ../threads/copyright.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
@@ -263,8 +263,8 @@ timer.o: ../machine/timer.cc ../threads/copyright.h ../machine/timer.h \
  ../machine/disk.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../threads/threadManage.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../machine/console.h ../threads/threadManage.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 addrspace.o: ../userprog/addrspace.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
@@ -282,8 +282,8 @@ addrspace.o: ../userprog/addrspace.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h ../userprog/addrspace.h ../bin/noff.h \
  ../userprog/PageTableManage.h
 bitmap.o: ../userprog/bitmap.cc ../threads/copyright.h \
@@ -314,8 +314,8 @@ exception.o: ../userprog/exception.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h ../userprog/syscall.h ../filesys/openfile.h
 progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
@@ -333,8 +333,8 @@ progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h ../userprog/addrspace.h
 console.o: ../machine/console.cc ../threads/copyright.h \
  ../machine/console.h ../threads/utility.h ../threads/copyright.h \
@@ -352,8 +352,8 @@ console.o: ../machine/console.cc ../threads/copyright.h \
  ../machine/disk.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../threads/threadManage.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../machine/console.h ../threads/threadManage.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 machine.o: ../machine/machine.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
@@ -371,8 +371,8 @@ machine.o: ../machine/machine.cc ../threads/copyright.h \
  ../machine/machine.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../threads/threadManage.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../machine/console.h ../threads/threadManage.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 mipssim.o: ../machine/mipssim.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
@@ -391,7 +391,7 @@ mipssim.o: ../machine/mipssim.cc ../threads/copyright.h \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/threadManage.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/threadManage.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 translate.o: ../machine/translate.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
@@ -409,8 +409,8 @@ translate.o: ../machine/translate.cc ../threads/copyright.h \
  ../threads/system.h ../threads/utility.h ../threads/thread.h \
  ../machine/machine.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
- ../machine/stats.h ../machine/timer.h ../threads/threadManage.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
+ ../machine/console.h ../threads/threadManage.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 synchcons.o: ../threads/synchcons.cc ../threads/synchcons.h \
  ../machine/console.h ../threads/copyright.h ../threads/utility.h \
@@ -457,7 +457,7 @@ PageTableManage.o: ../userprog/PageTableManage.cc \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/threadManage.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/threadManage.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 threadManage.o: ../threads/threadManage.cc ../threads/thread.h \
  ../threads/copyright.h ../threads/utility.h ../threads/bool.h \
@@ -503,8 +503,8 @@ filehdr.o: ../filesys/filehdr.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h ../filesys/filehdr.h ../userprog/bitmap.h \
  ../filesys/openfile.h
 filesys.o: ../filesys/filesys.cc ../threads/copyright.h ../machine/disk.h \
@@ -536,7 +536,7 @@ fstest.o: ../filesys/fstest.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/threadManage.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/threadManage.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../threads/thread.h
 openfile.o: ../filesys/openfile.cc ../threads/copyright.h \
@@ -556,8 +556,8 @@ openfile.o: ../filesys/openfile.cc ../threads/copyright.h \
  ../machine/disk.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../threads/synch.h
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../threads/synch.h
 synchdisk.o: ../filesys/synchdisk.cc ../threads/copyright.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
@@ -588,8 +588,8 @@ disk.o: ../machine/disk.cc ../threads/copyright.h ../machine/disk.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/threadManage.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/threadManage.h ../filesys/synchdisk.h ../machine/disk.h \
  ../threads/synch.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
