--- a/Source/nachos-3.4/code/Makefile.common
+++ b/Source/nachos-3.4/code/Makefile.common
@@ -79,7 +79,8 @@ USERPROG_H = ../userprog/addrspace.h\
 	../threads/synchcons.h\
 	../threads/FileManage.h\
 	../userprog/PageTableManage.h\
-	../threads/threadManage.h
+	../threads/threadManage.h\
+	../threads/ptable.h\
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
 	../userprog/exception.cc\
@@ -92,9 +93,11 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../threads/FileManage.cc\
 	../userprog/PageTableManage.cc\
 	../threads/threadManage.cc\
+	../threads/ptable.cc\
 
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o synchcons.o FileManage.o PageTableManage.o threadManage.o
+	mipssim.o translate.o synchcons.o FileManage.o PageTableManage.o threadManage.o \
+	ptable.o
 
 VM_H = 
 VM_C = 
