--- a/Source/nachos-3.4/code/Makefile.common
+++ b/Source/nachos-3.4/code/Makefile.common
@@ -81,6 +81,9 @@ USERPROG_H = ../userprog/addrspace.h\
 	../userprog/PageTableManage.h\
 	../threads/threadManage.h\
 	../threads/ptable.h\
+	../threads/stable.h\
+	../threads/sem.h
+
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
 	../userprog/exception.cc\
@@ -94,10 +97,12 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/PageTableManage.cc\
 	../threads/threadManage.cc\
 	../threads/ptable.cc\
+	../threads/stable.cc\
+	../threads/sem.cc
 
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o synchcons.o FileManage.o PageTableManage.o threadManage.o \
-	ptable.o
+	mipssim.o translate.o synchcons.o FileManage.o PageTableManage.o threadManage.o\
+	ptable.o stable.o sem.o
 
 VM_H = 
 VM_C = 
