pcb and exec syscall

--- a/Source/nachos-3.4/code/Makefile.common
+++ b/Source/nachos-3.4/code/Makefile.common
@@ -79,10 +79,10 @@ USERPROG_H = ../userprog/addrspace.h\
 	../threads/synchcons.h\
 	../threads/FileManage.h\
 	../userprog/PageTableManage.h\
-	../threads/threadManage.h\
 	../threads/ptable.h\
 	../threads/stable.h\
-	../threads/sem.h
+	../threads/sem.h\
+	../threads/pcb.h
 
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
@@ -95,14 +95,14 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../threads/synchcons.cc\
 	../threads/FileManage.cc\
 	../userprog/PageTableManage.cc\
-	../threads/threadManage.cc\
 	../threads/ptable.cc\
 	../threads/stable.cc\
-	../threads/sem.cc
+	../threads/sem.cc\
+	../threads/pcb.cc
 
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o synchcons.o FileManage.o PageTableManage.o threadManage.o\
-	ptable.o stable.o sem.o
+	mipssim.o translate.o synchcons.o FileManage.o PageTableManage.o\
+	ptable.o stable.o sem.o pcb.o
 
 VM_H = 
 VM_C = 
