--- a/Source/nachos-3.4/code/test/Makefile
+++ b/Source/nachos-3.4/code/test/Makefile
@@ -35,7 +35,7 @@ CPP = gcc -E
 INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt shell matmult sort createfile copy echo cat ping pong testExec testShell
+all: halt shell matmult sort createfile copy echo cat ping pong testExec testShell produce consume testProduceConsume
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.c > strt.s
