--- a/Source/nachos-3.4/code/test/Makefile
+++ b/Source/nachos-3.4/code/test/Makefile
@@ -35,7 +35,7 @@ CPP = gcc -E
 INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt shell matmult sort createfile copy echo cat ping pong testExec testShell procedure consume testProduceConsume
+all: halt shell matmult sort createfile copy echo cat ping pong testExec testShell proceduce consume testProduceConsume
 
 
 start.o: start.s ../userprog/syscall.h
@@ -114,9 +114,6 @@ testShell.o: testShell.c
 testShell: testShell.o start.o
 	$(LD) $(LDFLAGS) start.o testShell.o -o testShell.coff
 	../bin/coff2noff testShell.coff testShell
-	
-	
-	
 	
 produce.o: produce.c
 	$(CC) $(CFLAGS) -c produce.c
