--- a/Source/nachos-3.4/code/test/Makefile
+++ b/Source/nachos-3.4/code/test/Makefile
@@ -35,7 +35,7 @@ CPP = gcc -E
 INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt shell matmult sort createfile copy echo cat ping pong testExec testShell
+all: halt shell matmult sort createfile copy echo cat ping pong testExec testShell produce consume testProduceConsume
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.c > strt.s
@@ -113,3 +113,21 @@ testShell.o: testShell.c
 testShell: testShell.o start.o
 	$(LD) $(LDFLAGS) start.o testShell.o -o testShell.coff
 	../bin/coff2noff testShell.coff testShell
+
+produce.o: produce.c
+	$(CC) $(CFLAGS) -c produce.c
+produce: produce.o start.o
+	$(LD) $(LDFLAGS) start.o produce.o -o produce.coff
+	../bin/coff2noff produce.coff produce
+
+consume.o: consume.c
+	$(CC) $(CFLAGS) -c consume.c
+consume: consume.o start.o
+	$(LD) $(LDFLAGS) start.o consume.o -o consume.coff
+	../bin/coff2noff consume.coff consume
+
+testProduceConsume.o: testProduceConsume.c
+	$(CC) $(CFLAGS) -c testProduceConsume.c
+testProduceConsume: testProduceConsume.o start.o
+	$(LD) $(LDFLAGS) start.o testProduceConsume.o -o testProduceConsume.coff
+	../bin/coff2noff testProduceConsume.coff testProduceConsume
